[gd_scene load_steps=3 format=3 uid="uid://bc81e1nmv0dup"]

[ext_resource type="Script" path="res://AttacksAndHitboxes/Tim/crouching_kick_tim.gd" id="1_ekkx0"]

[sub_resource type="CircleShape2D" id="CircleShape2D_ae333"]
radius = 30.0666

[node name="Crouching Kick Tim" type="Area2D"]
collision_layer = 6
collision_mask = 6
script = ExtResource("1_ekkx0")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(171, 113)
shape = SubResource("CircleShape2D_ae333")

[node name="HitBoxTimer" type="Timer" parent="."]

[connection signal="body_entered" from="." to="." method="_on_body_entered"]
[connection signal="timeout" from="HitBoxTimer" to="." method="_on_hit_box_timer_timeout"]
